# Model-render

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.4990CD6958243FE8.idx  _vectorize.hpp.3EB02C01CB6F4B6A.idx  common.hpp.216E18CC5A6910F0.idx  compute_common.hpp.0188AEA5C034B92C.idx  compute_vector_decl.hpp.2089B771D93BD9DD.idx  compute_vector_relational.hpp.35A51A08456FB406.idx  constants.hpp.6CE512B81B652020.idx  constants.inl.324AA916FE53DA36.idx  engine.cpp.E3329AE9911E5CCC.idx  engine.h.CF3E6FAEEAE01C31.idx  epsilon.hpp.4686FC65F852536C.idx  epsilon.inl.6B06248B9CF3B3BA.idx  exponential.hpp.9BD5FCAE9FC8CA56.idx  func_common.inl.BFE6568C58190591.idx  func_exponential.inl.D74FFB9AABADFB5C.idx  func_geometric.inl.61A2D2543EA6FBDA.idx  func_integer.inl.CE7EE5F02828852F.idx  func_matrix.inl.E1ECECC0D2B6EB46.idx  func_packing.inl.6E89B1AB8C1DB85F.idx  func_trigonometric.inl.CA42B99F69E8A812.idx  func_vector_relational.inl.CAE4388180ED49BC.idx  fwd.hpp.92CED7D5DCA35C9D.idx  geometric.hpp.607C4A8F6E820BC8.idx  glad.c.C162F689837E8566.idx  glad.c.F9636BB334D0B2D3.idx  glad.h.4902DC1B9ABA2DEB.idx  glad.h.5CBA6ADCEF1E5C62.idx  glad.h.62A543795D264B7C.idx  glm.hpp.4F872FE3672D80A9.idx  integer.hpp.9AA5CFA39F5CDAF8.idx  khrplatform.h.4AB8381800B13D10.idx  main.cpp.6E619134CBED9CDD.idx  main.cpp.C6E740533F38A121.idx  mat2x2.hpp.3031D41178EE4F41.idx  mat2x3.hpp.F72B9058D7945CF7.idx  mat2x4.hpp.589280B409932E80.idx  (+167 more)
res/shaders/: def.frag
src/: engine.cpp  engine.h  main.cpp
src/model/: mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h  transform.h  vertex.h
src/shader/: shader.cpp  shader.h
(+1 files in other folders)
